Added new key generation strategy for tests